# YouRA

./: .env.example  .gitignore  README.md  pyproject.toml
YOURA/: README.md  install_hooks.py  requirements.txt
YOURA/.claude/: settings.local.json
YOURA/.claude/commands/: full-pipeline-unattended.md  hypothesis-next.md  hypothesis-status.md  phase1-research.md  phase1-targeted.md  phase2a-dialogue.md  phase2a-extended.md  phase2b-planning.md  phase2c-experiment-design.md  phase4-coding.md  phase45-hypothesis-synthesis.md  phase5-baseline-repo-comparison.md  phase6-paper-writing.md  phase65-adversarial-review.md
YOURA/.claude/hooks/: README.md  claude_runner.py  (+41 more)
YOURA/.serena/: project.yml
YOURA/tasks_youra/: iclr2025_bi_align.md  iclr2025_buildingtrust.md  iclr2025_data_problems.md  iclr2025_dl4c.md  iclr2025_mldpr.md  iclr2025_question.md  iclr2025_scope.md  iclr2025_scsl.md  iclr2025_verifai.md  iclr2025_wsl.md
analysis/Data_type_fabrication_analysis/: make_data_type_pies.py  run_fabrication_grounded_claude_data_type.py  run_fabrication_grounded_codex_data_type.py
analysis/LLM_as_Judge_main/: compute_fleiss_kappa.py  fleiss_kappa_summary.csv  run_llm_as_judge.py
analysis/MLRbench_hallucination_analysis/: extract_hallucination_csvs.py  plot_hallucination_prevalence.py  plot_hallucination_taxonomy_bounds.py  plot_hallucination_taxonomy_intersection.py
analysis/VSA/: classify_routing_levels.py  plot_routing_levels.py  routing_levels.csv  routing_levels_detail.csv  routing_levels_per_backbone.csv  routing_levels_per_task.csv
src/mlrbench/: __init__.py
(+11936 files in other folders)
