[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlrbench-youra"
version = "0.1.0"
description = "Unified MLRBench, AI Scientist v2, and YouRA evaluation code."
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "matplotlib",
    "nbclient",
    "nbformat",
    "numpy",
    "openai",
    "opencv-python",
    "opentelemetry-api",
    "Pillow",
    "pydantic",
    "pymupdf",
    "pymupdf4llm",
    "python-dotenv",
    "tqdm",
    "typing-extensions",
]

[tool.setuptools.packages.find]
where = ["src"]
